--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,3 @@
 [defaults]
 inventory = inventory
-host_key_checking = False
-retry_files_enabled = False
-
-[privilege_escalation]
-become = True
+retry_files_enabled = false
