--- a/ansible/roles/openvpn/tasks/main.yml
+++ b/ansible/roles/openvpn/tasks/main.yml
@@ -1,85 +1,89 @@
 ---
 - name: folder for selinux policy
-  file: path="{{ ansible_env.HOME }}/openvpn-selinux" state=directory
+  file:
+    path: ~/openvpn-selinux
+    state: directory
 
 - name: distribute selinux policy
-  copy: src=docker-openvpn.pp dest="{{ ansible_env.HOME }}/openvpn-selinux"
+  copy:
+    src: docker-openvpn.pp
+    dest: ~/openvpn-selinux
   register: selinux_policy
 
 - name: reload selinux policy
-  command: semodule -i {{ ansible_env.HOME }}/openvpn-selinux/docker-openvpn.pp
-  when: selinux_policy.changed
+  command: semodule -i ~/openvpn-selinux/docker-openvpn.pp
+  when: selinux_policy | changed
 
 - name: create a network for openvpn container
   docker_network:
-    name: '{{ nname }}'
+    name: '{{ openvpn_network_name }}'
     ipam_options:
-      subnet: '{{ nsubnet }}'
-      gateway: '{{ ngateway }}'
+      subnet: '{{ openvpn_container_network_subnet }}'
+      gateway: '{{ openvpn_container_network_gateway }}'
+    state: present
 
 - name: check if openvpn container config exists
-  command: docker volume inspect '{{ cname }}-config'
+  command: docker volume inspect {{ openvpn_container_name }}-config
   ignore_errors: true
-  register: openvpn_container
+  register: openvpn_container_config_state
 
-- name: deploy custom dns
-  include: ../../docker-dnsmasq/tasks/main.yml
-  vars:
-    dns_name: '{{ cname + "-dns" }}'
-    dns_net_name: '{{ nname }}'
-    dnsmasq_options: '{{ cust_dns_options }}'
-  when: cust_dns
+- block:
+  - name: deploy custom dns
+    include_role:
+      name: docker-dnsmasq
+    vars:
+      dnsmasq_container_name: '{{ openvpn_container_name }}-dns'
+      dnsmasq_network_name: '{{ openvpn_network_name }}'
+      dnsmasq_options: '{{ custom_dns_options }}'
 
-- name: get custom dns ip address
-  command: docker inspect -f '{{ "{{" }}range .NetworkSettings.Networks{{ "}}" }}{{ "{{" }}.IPAddress{{ "}}" }}{{ "{{" }}end{{ "}}" }}' '{{ cname + "-dns" }}'
-  register: cust_dns_ip
-  when: cust_dns
+  - name: get custom dns ip address
+    command: docker inspect --format {% raw %}'{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}'{% endraw %} {{ openvpn_container_name }}-dns
+    register: custom_dns_ip
+  when: custom_dns
 
-- name: configure openvpn container
+- block:
+  - name: configure openvpn container
+    docker_container:
+      name: '{{ openvpn_container_name }}-conf'
+      image: pschiffe/openvpn
+      pull: true
+      state: started
+      network_mode: '{{ net_mode }}'
+      purge_networks: '{{ purge_nets }}'
+      networks: '{{ nets }}'
+      volumes:
+        - /etc/localtime:/etc/localtime:ro
+        - '{{ openvpn_container_name }}-config:/etc/openvpn:z'
+      detach: false
+      command: ovpn_genconfig -C AES-256-CBC -a SHA384 {{ genconfig_options }} -u udp://{{ openvpn_container_url }}:{{ openvpn_container_port }} -s {{ vpn_subnet }} -n {{ custom_dns_ip.stdout if custom_dns else openvpn_container_dns }} {{ custom_vpn_options }}
+
+  - name: configure keys for openvpn container
+    docker_container:
+      name: '{{ openvpn_container_name }}-conf'
+      image: pschiffe/openvpn
+      pull: true
+      state: started
+      network_mode: '{{ net_mode }}'
+      purge_networks: '{{ purge_nets }}'
+      networks: '{{ nets }}'
+      volumes:
+        - /etc/localtime:/etc/localtime:ro
+        - '{{ openvpn_container_name }}-config:/etc/openvpn:z'
+      detach: false
+      env:
+        CA_KEY: '{{ openvpn_container_ca_key }}'
+        CA_CN: '{{ openvpn_container_url }}'
+      command: ovpn_initpki
+  when: openvpn_container_config_state | failed
+
+- name: remove openvpn configuration container
   docker_container:
-    name: '{{ cname }}-conf'
-    image: pschiffe/openvpn
-    pull: true
-    state: started
-    network_mode: '{{ net_mode }}'
-    purge_networks: '{{ purge_nets }}'
-    networks: '{{ nets }}'
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - '{{ cname }}-config:/etc/openvpn:z'
-    detach: false
-    command: ovpn_genconfig -C 'AES-256-CBC' -a 'SHA384' {{ genconfig_options }} -u udp://{{ openvpn_container_url | default(ansible_fqdn) }}:{{ ovpn_port }} -s {{ vsubnet }} -n {{ cust_dns_ip.stdout if cust_dns else openvpn_container_dns | default('8.8.8.8 8.8.4.4') }} {{ cust_vpn_options }}
-  when:
-    - openvpn_container|failed
-
-- name: configure keys for openvpn container
-  docker_container:
-    name: '{{ cname }}-conf'
-    image: pschiffe/openvpn
-    pull: true
-    state: started
-    network_mode: '{{ net_mode }}'
-    purge_networks: '{{ purge_nets }}'
-    networks: '{{ nets }}'
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - '{{ cname }}-config:/etc/openvpn:z'
-    detach: false
-    env:
-      CA_KEY: '{{ openvpn_container_ca_key }}'
-      CA_CN: '{{ openvpn_container_url | default(ansible_fqdn) }}'
-    command: ovpn_initpki
-  when:
-    - openvpn_container|failed
-
-- name: remove configuration openvpn container
-  docker_container:
-    name: '{{ cname }}-conf'
+    name: '{{ openvpn_container_name }}-conf'
     state: absent
 
 - name: create main openvpn container
   docker_container:
-    name: '{{ cname }}'
+    name: '{{ openvpn_container_name }}'
     image: pschiffe/openvpn
     pull: true
     state: started
@@ -93,7 +97,7 @@
     network_mode: '{{ net_mode }}'
     purge_networks: '{{ purge_nets }}'
     networks: '{{ nets }}'
-    published_ports: '{{ [] if sys_vpn else ovpn_port + ":1194/udp" }}'
+    published_ports: '{{ [] if system_vpn else openvpn_container_port + ":1194/udp" }}'
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - '{{ cname }}-config:/etc/openvpn:z'
+      - '{{ openvpn_container_name }}-config:/etc/openvpn:z'
